# footlab_retriever

./: Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
app/: bootstrap.py  config.py  journal.yml  main.py
app/adapters/: redis_eventpublisher.py  repository.py  scraper.py
app/adapters/repository/: fl_repo.py  repository.py  sc_repo.py
app/domain/: commands.py  events.py  model.py
app/domain/events/: footlab_events.py  game_events.py  journal_events.py  persist_events.py  scraper_events.py
app/domain/models/: footlab_models.py  game_models.py  journal_models.py
app/entrypoints/: crontab_script.py
app/logs/config/: filter_logs.py  format_logs.py  log_configs.json  setup_logs.py
app/logs/output/: log.jsonl  log.jsonl.1  log.jsonl.2  log.jsonl.3
app/service_layer/: handlers.py  messagebus.py
app/service_layer/handlers/: footlab_handlers.py  journal_handlers.py  message_handlers_map.py  normalization_handlers.py  persist_handlers.py  scraper_handlers.py
tests/scraper/integration/repository/: conftest.py  test_repository.py
tests/scraper/unit/: test_persist.py  test_scrape.py
